# gamemath-1-hw

./: CMakeLists.txt  CMakePresets.json
src/: 5home.cpp  CMakeLists.txt  float_functions.h  main.cpp
tests/: CMakeLists.txt  function_tests.cpp
